Fixed icons on small screen.

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,8 @@ background-size: 100px 100px; */
         padding: 0;
     }
 
-    .icon-item {
-        padding: 0 .8rem;
+    .icon_item {
+        font-size: 2.8rem;
+        padding: 0 1.7rem;
     }
 }
